# TrackWild

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py  tiles.py
backend/app/core/: config.py  database.py  logging.py  rate_limit.py  redis.py
backend/app/models/: __init__.py  bear_observation.py  risk_profile.py  tile.py
backend/app/schemas/: tile.py
backend/app/services/: risk_config.py  tile_generator.py  tile_queue.py  tile_service.py  tile_worker.py
backend/config/: .gitkeep  default_risk_profiles.json  risk_profiles.json
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_generated_at.py  003_osm_spatial_indexes.py  004_bear_observations.py  005_tiles_generated_at_index.py
backend/scripts/: download_gbif.py  generate_tiles.py  init.sh  osm2pgsql_style.lua  seed.py
backend/tests/: conftest.py
deployments/: .env.example  docker-compose.dev.yml  docker-compose.yml
frontend/: Caddyfile  Caddyfile.dev  Caddyfile.prod  Caddyfile.prod.http  Dockerfile  index.html
frontend/public/: style.json
frontend/src/: App.tsx  main.tsx
